PIP-289 Update Java to 17 and tidy up warnings